Add click para tela de detalhes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CountryAPI</string>
     <string name="title_first_screen">Countries of the world</string>
     <string name="flag_image_country">flag image country</string>
+    <string name="information_of_the_country">Information of the Country</string>
 </resources>
