Add Details data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_first_screen">Countries of the world</string>
     <string name="flag_image_country">flag image country</string>
     <string name="information_of_the_country">Information of the Country</string>
+    <string name="country">Country:</string>
+    <string name="population">Population:</string>
+    <string name="area">Area:</string>
+    <string name="region">\ Region: \</string>
 </resources>
